Working overscaling with cpuset