@@ -12,6 +12,8 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
+import static com.phonepe.drove.executor.ExecutorTestingUtils.discoveredNumaNode;
+import static com.phonepe.drove.executor.utils.ExecutorUtils.mapCores;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class NumaActivationResourceLoaderTest extends AbstractTestBase {
@@ -20,7 +22,9 @@ class NumaActivationResourceLoaderTest extends AbstractTestBase {
     @SneakyThrows
     void testIfNoChangeIsMadeWhenNumaPinningIsEnabled() {
         val baseLoader = Mockito.mock(ResourceLoader.class);
-        val resourceMap = Map.of(0, new ResourceManager.NodeInfo(Set.of(1, 2, 3, 4), 1000));
+        final var availableCores = Set.of(1, 2, 3, 4);
+        val resourceMap = Map.of(0,
+                                 ResourceManager.NodeInfo.from(availableCores, 1000));
         Mockito.when(baseLoader.loadSystemResources()).thenReturn(resourceMap);
         val rl = new NumaActivationResourceLoader(baseLoader, ExecutorTestingUtils.resourceConfig());
         val processedResource = rl.loadSystemResources();
@@ -31,15 +35,21 @@ class NumaActivationResourceLoaderTest extends AbstractTestBase {
     @SneakyThrows
     void testIfNodesAreFlattenedOutIfNumaPinningIsDisabled() {
         val baseLoader = Mockito.mock(ResourceLoader.class);
-        val resourceMap = Map.of(0, new ResourceManager.NodeInfo(Set.of(2, 4, 6, 8), 1000), 1, new ResourceManager.NodeInfo(Set.of(1, 3, 5, 7), 1000));
+        val resourceMap
+                = Map.of(0, discoveredNumaNode(1), 1, discoveredNumaNode(5));
         Mockito.when(baseLoader.loadSystemResources()).thenReturn(resourceMap);
         val resourceConfig = ExecutorTestingUtils.resourceConfig();
         resourceConfig.setDisableNUMAPinning(true);
         val rl = new NumaActivationResourceLoader(baseLoader, resourceConfig);
         val processedResource = rl.loadSystemResources();
+        val combinedAvailableCores = Set.of(1, 2, 3, 4, 5, 6, 7, 8);
         assertEquals(Map.of(0,
-                new ResourceManager.NodeInfo(Set.of(1, 2, 3, 4, 5, 6, 7, 8), 2000)),
-                processedResource);
+                            new ResourceManager.NodeInfo(combinedAvailableCores,
+                                                                   mapCores(combinedAvailableCores),
+                                                                   2000,
+                                                         combinedAvailableCores,
+                                                         2000)),
+                     processedResource);
     }
 
     @Test
@@ -52,8 +62,8 @@ class NumaActivationResourceLoaderTest extends AbstractTestBase {
         val rl = new NumaActivationResourceLoader(baseLoader, resourceConfig);
         val processedResource = rl.loadSystemResources();
         assertEquals(Map.of(0,
-                new ResourceManager.NodeInfo(Collections.emptySet(), 0)),
-                processedResource);
+                            new ResourceManager.NodeInfo(Set.of(), Map.of(), 0, Set.of(), 0)),
+                     processedResource);
     }
 
 }
